@@ -1,5 +1,6 @@
 HEAD
 	+ Update version to 4.1
+	+ Remove deprecated Summarized report column in Logs page
 	+ Removed support for SSLv2 & SSLv3. Using recommended ciphers from:
 	  https://wiki.mozilla.org/Security/Server_Side_TLS
 	  (contribution by theodorerambert)
